# ideals-varieties-algorithms

./: .ocamlformat  README.md  dune-project  hw1.ml
ctxt/: ctxt.ml  dune
iva/: dune  fld.ml  multivariate.ml  polynomial.ml  polynomial_map._ml  univariate.ml  util.ml  zinf.ml
tests/: dune  test.ml  test_algebra.ml  test_multivariate.ml
